src/snapshots/querymatter__render__tests__md_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Format::Md)"
---
| status | Count |
|--------|-------|
| synced | 2     |
| draft  | 1     |
