src/snapshots/querymatter__render__tests__table_compact_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Format::Table, TableStyle::Compact)"
---
────────────────
 status   Count
════════════════
 synced   2
────────────────
 draft    1
────────────────
