src/snapshots/querymatter__render__tests__table_multiline_cell.snap
---
source: src/render.rs
expression: "render(&t, Output::Format(Format::Table), TableStyle::Ascii, true)"
---
+------+------------------+
| path | body             |
+=========================+
| a.md | # Title          |
|      |                  |
|      | First paragraph. |
|      | Second line.     |
+------+------------------+
