src/snapshots/querymatter__render__tests__table_plain_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Format::Table, TableStyle::Plain)"
---
 status  Count
 synced  2
 draft   1
