src/snapshots/querymatter__render__tests__table_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Format::Table)"
---
+--------+-------+
| status | Count |
+================+
| synced | 2     |
|--------+-------|
| draft  | 1     |
+--------+-------+
