src/snapshots/querymatter__render__tests__table_unicode_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Output::Format(Format::Table), TableStyle::Unicode)"
---
╭────────┬───────╮
│ status │ Count │
╞════════╪═══════╡
│ synced │ 2     │
├────────┼───────┤
│ draft  │ 1     │
╰────────┴───────╯
