src/snapshots/querymatter__render__tests__vertical_alignment_snapshot.snap
---
source: src/render.rs
expression: "render(&t, Output::Vertical, TableStyle::Ascii)"
---
*************************** 1. row ***************************
       id: 1
file.path: notes/a.md
        s: draft
