src/snapshots/querymatter__render__tests__vertical_multiline_value.snap
---
source: src/render.rs
expression: "render(&t, Output::Vertical, TableStyle::Ascii, true)"
---
*************************** 1. row ***************************
path: a.md
body: # Title

First paragraph.
