src/snapshots/querymatter__render__tests__vertical_snapshot.snap
---
source: src/render.rs
expression: "render(&table(), Output::Vertical, TableStyle::Ascii)"
---
*************************** 1. row ***************************
status: synced
 Count: 2
*************************** 2. row ***************************
status: draft
 Count: 1
